<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/scroll_view_for_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_daily_activity_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:text="@string/read_daily_activity_stat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.039" />

            <Button
                android:id="@+id/button_heart_rate_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_heart_rate_stat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.672"
                app:layout_constraintStart_toEndOf="@+id/button_daily_activity_stat"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.039" />

            <Button
                android:id="@+id/button_daily_activity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_daily_activity_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toStartOf="@+id/button_heart_rate_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_heart_rate_detail" />

            <Button
                android:id="@+id/button_heart_rate_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/read_heart_rate_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_heart_rate_stat"
                app:layout_constraintVertical_bias="0.033" />

            <Button
                android:id="@+id/button_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_authority"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toStartOf="@+id/button_valid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_user_info" />

            <Button
                android:id="@+id/button_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_app_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toStartOf="@+id/button_user_info"
                app:layout_constraintStart_toEndOf="@+id/button_auth"
                app:layout_constraintTop_toTopOf="@+id/button_user_info" />

            <Button
                android:id="@+id/button_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/get_user_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_heart_rate_detail"
                app:layout_constraintVertical_bias="0.033" />

            <Button
                android:id="@+id/download_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:text="@string/download_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/revoke_access" />

            <Button
                android:id="@+id/revoke_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoke_access"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.669"
                app:layout_constraintStart_toEndOf="@+id/download_app"
                app:layout_constraintTop_toBottomOf="@+id/button_user_info"
                app:layout_constraintVertical_bias="0.275" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scroll_view_for_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:layout_weight="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>